--- a/about/bio.html
+++ b/about/bio.html
@@ -13,6 +13,11 @@ title: Bio
   			<a href="contact.html" class="w3-button w3-black">Contact Info</a>
   			<a href="bio.html" class="w3-button w3-black">Bio & General description</a>
 		</div>
+		<br><br>
+		<div class="w3-container">
+ 			<a href="index.html" class="w3-button w3-black">Me</a>
+  			<a href="contact.html" class="w3-button w3-black">The people I love</a>
+  		</div>
 	</center>
 	
 		<br><br>
