--- a/about/bio.html
+++ b/about/bio.html
@@ -11,12 +11,12 @@ title: Bio
 		<div class="w3-container">
  			<a href="index.html" class="w3-button w3-black">Who am I?</a>
   			<a href="contact.html" class="w3-button w3-black">Contact Info</a>
-  			<a href="bio.html" class="w3-button w3-black">Bio & General description</a>
+  			<a href="bio.html" class="w3-button w3-black">Bio & Pictures</a>
 		</div>
 		<br><br>
 		<div class="w3-container">
- 			<a href="index.html" class="w3-button w3-black">Me</a>
-  			<a href="contact.html" class="w3-button w3-black">The people I love</a>
+ 			<a href="#" class="w3-button w3-black">Me</a>
+  			<a href="#" class="w3-button w3-black">The people I love</a>
   		</div>
 	</center>
 	
