--- a/about/bio.html
+++ b/about/bio.html
@@ -9,14 +9,14 @@ title: Bio
 		<br><br>
 	<center>
 		<div class="w3-container">
- 			<a href="index.html" class="w3-button w3-black">Who am I?</a>
-  			<a href="contact.html" class="w3-button w3-black">Contact Info</a>
-  			<a href="bio.html" class="w3-button w3-black">Bio & Pictures</a>
+ 			<a href="index.html" class="w3-button w3-black w3-round-large">Who am I?</a>
+  			<a href="contact.html" class="w3-button w3-black w3-round-large">Contact Info</a>
+  			<a href="bio.html" class="w3-button w3-black w3-round-large">Bio & Pictures</a>
 		</div>
 		<br><br>
 		<div class="w3-container">
- 			<a href="#" class="w3-button w3-black">Me</a>
-  			<a href="#" class="w3-button w3-black">The people I love</a>
+ 			<a href="#" class="w3-button w3-grey w3-hover-black w3-round-xlarge">Me</a>
+  			<a href="#" class="w3-button w3-grey w3-hover-black w3-round-xlarge">The people I love</a>
   		</div>
 	</center>
 	
