--- a/about/bio.html
+++ b/about/bio.html
@@ -15,8 +15,8 @@ title: Bio
 		</div>
 		<br>
 		<div class="w3-container">
- 			<a href="#" class="w3-button w3-grey w3-hover-black w3-round-large w3-border">Me</a>
-  			<a href="#" class="w3-button w3-grey w3-hover-black w3-round-large w3-border">The people I love</a>
+ 			<a href="#" class="w3-button w3-grey w3-hover-black w3-round-large w3-border w3-border-black">Me</a>
+  			<a href="#" class="w3-button w3-grey w3-hover-black w3-round-large w3-border w3-border-black">The people I love</a>
   		</div>
 	</center>
 	
