--- a/about/bio.html
+++ b/about/bio.html
@@ -14,11 +14,10 @@ title: Bio
   			<a href="bio.html" class="w3-button w3-black w3-round-large w3-border">Bio & Pictures</a>
 		</div>
 		<br>
-		<div class="w3-container">
- 			<a href="#" class="w3-button w3-grey w3-hover-black w3-round-large w3-border w3-border-black">Me</a>
-  			<a href="#" class="w3-button w3-grey w3-hover-black w3-round-large w3-border w3-border-black">The people I love</a>
-  		</div>
-	</center>
+			<a href="#" class="w3-button w3-grey w3-hover-black w3-round-large w3-border w3-border-black">Me</a>
+			<br>
+  			<a href="#" class="w3-button w3-grey w3-hover-black w3-round-large w3-border w3-border-black">The people who made me who I am</a>
+  		</center>
 	
 		<br><br>
 		<div class="container">
