--- a/about/bio.html
+++ b/about/bio.html
@@ -13,10 +13,12 @@ title: Bio
   			<a href="contact.html" class="w3-button w3-black w3-round-large w3-border">Contact Info</a>
   			<a href="bio.html" class="w3-button w3-black w3-round-large w3-border">Bio & Pictures</a>
 		</div>
-		<br>
-			<a href="#" class="w3-button w3-grey w3-hover-black w3-round-large w3-border w3-border-black">Me</a>
+		<br>    
+		<div class="w3-container">
+			<a href="#" class="w3-button w3-grey w3-hover-black w3-round-large w3-border w3-border-black"><i class="fa fa-camera" aria-hidden="true"></i> Me</a></div>
 			<br>
-  			<a href="#" class="w3-button w3-grey w3-hover-black w3-round-large w3-border w3-border-black">The people who made me who I am</a>
+		<div class="w3-container">
+  			<a href="#" class="w3-button w3-grey w3-hover-black w3-round-large w3-border w3-border-black"><i class="fa fa-camera" aria-hidden="true"></i> The people who made me who I am</a></div>
   		</center>
 	
 		<br><br>
