--- a/about/bio.html
+++ b/about/bio.html
@@ -15,9 +15,9 @@ title: Bio
 		</div>
 		<br>    
 		<div class="w3-container">
-			<a href="#" class="w3-button w3-grey w3-hover-black w3-round-large w3-border w3-border-black"><i class="fa fa-camera" aria-hidden="true"></i> Me</a></div>
+			<a href="#" class="w3-button w3-light-grey w3-hover-black w3-round-large w3-border w3-border-black"><i class="fa fa-camera" aria-hidden="true"></i> Me</a></div>
 		<div class="w3-container">
-  			<a href="#" class="w3-button w3-grey w3-hover-black w3-round-large w3-border w3-border-black"><i class="fa fa-camera" aria-hidden="true"></i> The people who made me who I am</a></div>
+  			<a href="#" class="w3-button w3-light-grey w3-hover-black w3-round-large w3-border w3-border-black"><i class="fa fa-camera" aria-hidden="true"></i> The people who made me who I am</a></div>
   		</center>
 	
 		<br><br>
