--- a/about/bio.html
+++ b/about/bio.html
@@ -25,9 +25,9 @@ title: Bio
 		
 			<center><h1 style="color:#B40404;"><b>My Bio</b></h1></center>
   		
-			<h3>I was born in México City back in 1993, on March 7th. Ever since, I've lived with my parents and my crazy little-sister, Angélica.</h3>
+			<h3>I was born in México City in March 7th, 1993. Ever since, I've been living with my parents and my crazy little-sister, Angélica.</h3>
 			
-			<h3>I've always had a good memory, so I was one of the best students at school when I was little. Our educational system tends to give a lot of importance to the grades that students get on their exams, and since I could easily memorize the content of my notes, I always looked as if I had learned a lot more than now I think I did.</h3>
+			<h3>I've always had a good memory and I've always been good at following instructions, so I was one of the best students at school. </h3>
 			
 			<h3></h3>
 			
